# fast-todo-api

./: .pdm-python  README.md  db.sqlite  pyproject.toml  requirements.txt
src/: db.py  dicts.py  main.py  models.py
