[project]
name = "fast-todo-api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "NinjaBitroom", email = "gabrielbitercourt@gmail.com"},
]
dependencies = [
    "fastapi>=0.110.1",
    "uvicorn[standart]>=0.29.0",
    "sqlmodel>=0.0.16",
    "python-multipart>=0.0.9",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
